--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web app reversi try 2",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/jennicc2/reversi-1#readme",
   "dependencies": {
+    "atom": "^1.4.1",
     "node-static": "^0.7.11",
     "socket.io": "^2.3.0"
   }
